---- Changes since 1.440 ----
Added an advanced option to have Webmin turn off the immutable bit on files before writing to them, and turn it back on when done.
Re-designed the Webmin Themes page to use tabs.
Added support for overlay themes, which can be selected in addition to a regular theme. An overlay typically just modifies the CSS or images in the real theme, making simple design changes easier.
Converted commands in the module's API file to POD format, and added more details about each function.
---- Changes since 1.450 ----
Added GPG verification of the updates list and modules from the Webmin update repository, when the gpg command is installed.
Expired Unix passwords can now be changed using an external command, instead of PAM or directly updating /etc/shadow. This is set on the Authentication page.
---- Changes since 1.460 ----
Detect and ignore failures when checking if other modules are installed.
---- Changes since 1.470 ----
Added a field to the Operating System and Environment page for additional Perl module directories.
---- Changes since 1.480 ----
Removed the option to select an OSDN mirror, as Sourceforge now does sensible location-based redirects automatically.
Added an option on the Logging page to record logins and logouts from Webmin, for display in the Webmin Actions Log module.
---- Changes since 1.490 ----
Added a field to the Debugging Log File page to select modules to debug for.
---- Changes since 1.500 ----
Added an option to the User Interface page to always put the hostname before the page title.
---- Changes since 1.510 ----
Strong PCI-compliant ciphers can now be selected on the SSL Encryption page.
---- Changes since 1.540 ----
Added the Sending Email page which controls how Webmin itself sends messages.
---- Changes since 1.550 ----
Added fields to the Index Page Options page to control the display of Webmin and module updates.
Moved settings related to Webmin's built-in webserver to the new Web Server Options page.